--- a/index.html
+++ b/index.html
@@ -14,8 +14,352 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>tea station</h1>
-    <!-- YOUR CODE GOES HERE -->
-    <script src="app.js"></script>
+    <!-- navbar -->
+    <!-- nav button -->
+
+    <span class="nav-btn">
+      <li class="fa fa-bars" id="nav-btn"></li>
+    </span>
+    <nav class="navbar" id="navbar">
+      <div class="navbar-header">
+        <span class="nav-close" id="nav-close">
+          <i class="fas fa-times"></i>
+        </span>
+      </div>
+      <ul class="nav-items">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="about.html" class="nav-link">about</a></li>
+        <li><a href="skills.html" class="nav-link">skills</a></li>
+        <li><a href="products.html" class="nav-link">products</a></li>
+      </ul>
+    </nav>
+    <!-- end of nav button -->
+    <!-- header -->
+    <header class="header">
+      <div class="banner">
+        <h2>Over one hundred flavours of</h2>
+        <h1>
+          specially <br />
+          crafted tea
+        </h1>
+        <a href="skills.html" class="btn banner-btn"> explore</a>
+      </div>
+    </header>
+    <!-- end of header -->
+    <div class="content-divider"></div>
+    <!-- skills section -->
+    <section class="skills clearfix">
+      <!-- single skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-mug-hot"></i>
+        </span>
+        <h4 class="skill-title">made in US</h4>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus, nulla.
+        </p>
+      </article>
+      <!-- end of single skill -->
+      <!-- single skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-glass-cheers"></i>
+        </span>
+        <h4 class="skill-title">relaxation</h4>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus, nulla.
+        </p>
+      </article>
+      <!-- end of single skill -->
+      <!-- single skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-bomb"></i>
+        </span>
+        <h4 class="skill-title">energy</h4>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus, nulla.
+        </p>
+      </article>
+      <!-- end of single skill -->
+      <!-- single skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-mortar-pestle"></i>
+        </span>
+        <h4 class="skill-title">family recipe</h4>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus, nulla.
+        </p>
+      </article>
+      <!-- end of single skill -->
+    </section>
+    <!--end of skills Section -->
+    <!-- about -->
+    <section>
+      <div class="section-center clearfix">
+        <!-- about-img -->
+        <article class="about-img">
+          <div class="about-picture-container">
+            <img src="./images/about-bcg.jpeg" class="about-picture" alt="" />
+          </div>
+        </article>
+        <!-- about info -->
+        <article class="about-info">
+          <!-- section title -->
+          <div class="section-title">
+            <h3>about our</h3>
+            <h2>tea station</h2>
+          </div>
+          <!-- end of section title -->
+          <p class="about-text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum esse,
+            officiis eveniet blanditiis voluptatum velit!
+          </p>
+          <p class="about-text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum esse,
+            officiis eveniet blanditiis voluptatum velit!
+          </p>
+          <a href="about.html" class="btn">Learn more</a>
+        </article>
+      </div>
+    </section>
+    <!-- end of about -->
+    <!-- products  -->
+    <section class="products">
+      <div class="section-center clearfix">
+        <!-- product info -->
+        <article class="product-info">
+          <!-- section title -->
+          <div class="section-title">
+            <h3>check out</h3>
+            <h2>our products</h2>
+          </div>
+          <!-- end of section title -->
+          <p class="product-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            reiciendis placeat cumque commodi libero expedita quae earum non,
+            veritatis officiis.
+          </p>
+          <a href="products.html" class="btn">INVENTORY</a>
+        </article>
+        <!-- product inventory -->
+        <article class="product-inventory clearfix">
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/product-1.jpeg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">ginger peach tea</h4>
+            <h4 class="product-price">R36</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/product-2.jpeg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">rooibos tea</h4>
+            <h4 class="product-price">R40</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/product-3.jpeg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">five roses tea</h4>
+            <h4 class="product-price">R36</h4>
+          </div>
+          <!-- end of single product -->
+        </article>
+      </div>
+    </section>
+    <!-- end of products  -->
+    <!-- services -->
+    <section class="services">
+      <div class="section-title services-title">
+        <h3>explore</h3>
+        <h2>our services</h2>
+      </div>
+      <div class="section-center clearfix">
+        <!-- single card -->
+
+        <article class="service-card">
+          <div class="service-img-container">
+            <img src="./images/product-1.jpeg" class="service-image" alt="" />
+            <!-- icon -->
+            <span class="service-icon">
+              <i class="fas fa-mortar-pestle fa-fw"></i>
+            </span>
+          </div>
+          <!-- service info -->
+          <div class="service-info">
+            <h4>Custom Recipes</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
+              quaerat quos voluptates totam maiores! Unde sunt quos perferendis
+              laudantium, ad quibusdam commodi aspernatur soluta fuga?
+            </p>
+            <a href="products.html" class="btn service-btn">READ MORE</a>
+          </div>
+        </article>
+        <!--end of single card -->
+        <!-- single card -->
+        <article class="service-card">
+          <div class="service-img-container">
+            <img src="./images/product-2.jpeg" class="service-image" alt="" />
+            <!-- icon -->
+            <span class="service-icon">
+              <i class="fas fa-home -fw"></i>
+            </span>
+          </div>
+          <!-- service info -->
+          <div class="service-info">
+            <h4>home delivery</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
+              quaerat quos voluptates totam maiores! Unde sunt quos perferendis
+              laudantium, ad quibusdam commodi aspernatur soluta fuga?
+            </p>
+            <a href="products.html" class="btn service-btn">READ MORE</a>
+          </div>
+        </article>
+        <!--end of single card -->
+        <!-- single card -->
+
+        <article class="service-card">
+          <div class="service-img-container">
+            <img src="./images/product-3.jpeg" class="service-image" alt="" />
+            <!-- icon -->
+            <span class="service-icon">
+              <i class="fas fa-mug-hot fa-fw"></i>
+            </span>
+          </div>
+          <!-- service info -->
+          <div class="service-info">
+            <h4>tea aging</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
+              quaerat quos voluptates totam maiores! Unde sunt quos perferendis
+              laudantium, ad quibusdam commodi aspernatur soluta fuga?
+            </p>
+            <a href="products.html" class="btn service-btn">READ MORE</a>
+          </div>
+        </article>
+        <!--end of single card -->
+      </div>
+    </section>
+    <!-- end of services -->
+    <!-- contacts -->
+    <section class="contact">
+      <div class="section-center clearfix">
+        <!-- contact info -->
+        <article class="contact-info">
+          <!-- contact item -->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-location-arrow"></i>
+              </span>
+              address
+            </h4>
+            <h4 class="contact-text">
+              Tembisa Zone 4<br />
+              Winnie Mandela <br />
+              1632
+            </h4>
+          </div>
+          <!-- end of contact item -->
+          <!-- contact item -->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-envelope"></i>
+              </span>
+              email
+            </h4>
+            <h4 class="contact-text">info@teastation.com</h4>
+          </div>
+          <!-- end of contact item -->
+          <!-- contact item -->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </span>
+              address
+            </h4>
+            <h4 class="contact-text">+27 75 854 5454</h4>
+          </div>
+          <!-- end of contact item -->
+        </article>
+        <!-- contact form -->
+        <article class="contact-form">
+          <h3>contact us</h3>
+          <form action="https://formspree.io/f/mgepjpyr" method="POST">
+            <div class="form-group">
+              <input
+                type="text"
+                placeholder="name"
+                class="form-control"
+                name="firstName"
+              />
+              <input
+                type="email"
+                placeholder="email"
+                name="email"
+                class="form-control"
+                name="emailAddress"
+              />
+              <textarea
+                name="message"
+                placeholder="message"
+                class="form-control"
+                rows="5"
+              ></textarea>
+            </div>
+            <!-- submit button -->
+            <button type="submit" class="submit-btn btn">submit</button>
+          </form>
+        </article>
+      </div>
+    </section>
+    <!-- end of contacts -->
+    <!-- footer -->
+    <footer>
+      <section class="footer">
+        <div class="section-center clearfix">
+          <div class="social-icons">
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook"> </i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-twitter"> </i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-instagram"> </i>
+            </a>
+          </div>
+          <h4 class="footer-text">
+            &copy; <span id="date"></span>
+            <span class="company-name">tea station</span>
+            all rights reserved
+          </h4>
+        </div>
+      </section>
+    </footer>
+    <script src="./main.js"></script>
+    <!-- end of footer -->
   </body>
 </html>
